<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentDisciplina"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisciplinaFragment">

    <EditText
        android:id="@+id/etCodigoDisc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/etNomeDisc"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarDisc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDisc" />

    <Button
        android:id="@+id/btnBuscarDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:text="@string/buscar"
        app:layout_constraintBaseline_toBaselineOf="@+id/etCodigoDisc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoDisc" />

    <EditText
        android:id="@+id/etNomeDisc"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="87dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDisc" />

    <Button
        android:id="@+id/btnInserirDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btnModificarDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:text="@string/modificar"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/btnExcluirDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="@+id/btnInserirDisc"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirDisc" />

    <Button
        android:id="@+id/btnListarDisc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarDisc"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarDisc" />

    <TextView
        android:id="@+id/tvTituloDisc"
        android:layout_width="157dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/disciplina"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="26dp"
        android:foregroundTint="#DE3939"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>