<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentProfessor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfessorFragment">

    <EditText
        android:id="@+id/etCodigoProf"
        android:layout_width="243dp"
        android:layout_height="52dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloProf" />

    <Button
        android:id="@+id/btnBuscarProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="19dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/etNomeProf"
        app:layout_constraintEnd_toEndOf="@+id/etNomeProf" />

    <EditText
        android:id="@+id/etNomeProf"
        android:layout_width="343dp"
        android:layout_height="57dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="14dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/etTitulacaoProf"
        app:layout_constraintEnd_toEndOf="@+id/etTitulacaoProf"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCodigoProf"
        app:layout_constraintTop_toBottomOf="@+id/etCodigoProf"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/etTitulacaoProf"
        android:layout_width="342dp"
        android:layout_height="53dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="124dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/titulacao"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/btnExcluirProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCodigoProf"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnInserirProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="295dp"
        android:text="@string/inserir"
        app:layout_constraintStart_toStartOf="@+id/etTitulacaoProf"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnModificarProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="98dp"
        android:text="@string/modificar"
        app:layout_constraintBottom_toTopOf="@+id/tvListarProf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnExcluirProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="7dp"
        android:text="@string/excluir"
        app:layout_constraintStart_toStartOf="@+id/btnInserirProf"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirProf" />

    <Button
        android:id="@+id/btnListarProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="9dp"
        android:text="@string/listar"
        app:layout_constraintEnd_toEndOf="@+id/btnModificarProf"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarProf" />

    <TextView
        android:id="@+id/tvTituloProf"
        android:layout_width="157dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="4dp"
        android:text="@string/professor"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarProf"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvListarProf"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarProf" />
</androidx.constraintlayout.widget.ConstraintLayout>